--- a/data/config
+++ b/data/config
@@ -4,7 +4,7 @@
 
 # Configurable defaults
 default_template=default.latex
-template_dirs="/usr/share/pandoc/data/templates"
+template_dirs="/usr/share/pandoc/data/templates $HOME/.pandoc/templates"
 pandoc_options="--file-scope --wrap=preserve --biblatex"
 debug_info=0
 auto_preview=0
